--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,9 @@ main {
 
 .mobile {
   background-color: hsl(0, 0%, 100%);
-  width: 70%;
-  padding: 5%;
+  width: 75%;
+  padding: 3%;
+  margin-top: 20%;
   border-radius: 20px;
 }
 
@@ -54,7 +55,11 @@ main {
 }
 
 .background {
-  background: linear-gradient(hsl(264, 100%, 61%), hsl(293, 100%, 63%));
+  background: linear-gradient(
+    to right,
+    hsl(264, 100%, 61%),
+    hsl(293, 100%, 63%)
+  );
   border-radius: 20px 20px 10px 10px;
 }
 
@@ -104,6 +109,7 @@ main {
   margin-top: 5%;
   margin-left: 2%;
   padding: 3%;
+  background-color: lightgrey;
   color: hsl(276, 55%, 52%);
   border-radius: 10px;
 }
@@ -112,8 +118,9 @@ main {
   width: 60%;
   font-size: 10px;
   margin-top: 5%;
-  margin-left: 2%;
+  margin-right: 2%;
   padding: 3%;
+  background-color: hsl(0, 0%, 100%);
   color: hsl(271, 15%, 43%);
   border-radius: 10px;
 }
@@ -140,7 +147,11 @@ main {
   align-items: center;
   padding: 5%;
   font-size: 10px;
-  background: linear-gradient(hsl(264, 100%, 61%), hsl(293, 100%, 63%));
+  background: linear-gradient(
+    to left,
+    hsl(264, 100%, 61%),
+    hsl(293, 100%, 63%)
+  );
   color: hsl(0, 0%, 100%);
   margin-top: 5%;
   margin-left: 2%;
@@ -168,11 +179,11 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: black;
+  color: hsl(206, 6%, 79%);
 }
 
 .right-angle {
-  width: 15%;
+  width: 12%;
   color: hsl(0, 0%, 100%);
   background-color: hsl(271, 36%, 24%);
   font-size: 20px;
@@ -200,4 +211,38 @@ main {
   width: 80%;
   margin-top: 5%;
   color: hsl(270, 7%, 64%);
+}
+
+@media only screen and (min-width: 768px) {
+  main {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .mobile {
+    margin-top: 0;
+    margin-left: 10%;
+    width: 20%;
+    padding: 0.7%;
+  }
+
+  .text {
+    width: 40%;
+    align-items: flex-start;
+    padding-left: 5%;
+    text-align: left;
+  }
+
+  .background-purple {
+    width: 30%;
+    height: 80vh;
+    border-radius: 0px 0px 1000px 1000px;
+  }
+
+  .background-grey {
+    width: 30%;
+    height: 80vh;
+    border-radius: 1000px 0px 0px 0px;
+  }
 }
