--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ main {
   background-color: hsl(0, 0%, 100%);
   width: 75%;
   padding: 3%;
-  margin-top: 20%;
+  margin-top: 30%;
   border-radius: 20px;
 }
 
@@ -198,8 +198,10 @@ main {
   display: flex;
   align-items: center;
   text-align: center;
-  margin-top: 7%;
+  margin-top: 10%;
+  padding-bottom: 10%;
   flex-direction: column;
+  line-height: 24px;
 }
 
 .text h1 {
